chore: 补充英文翻译

--- a/extension/_locales/en/messages.json
+++ b/extension/_locales/en/messages.json
@@ -1,14 +1,12 @@
 {
   "saveCurrentPage": {
-    "message": "保存当前页面",
-    "description": "Button to save the current page"
+    "message": "Save current page"
   },
   "noData": {
-    "message": "没有数据可用",
-    "description": "Message displayed when there is no data to show"
+    "message": "No data available"
   },
   "noDataOnSite": {
-    "message": "$host$ 上没有可用数据",
+    "message": "No data available on $host$",
     "placeholders": {
       "host": {
         "content": "$1"
@@ -16,27 +14,147 @@
     }
   },
   "options": {
-    "message": "选项",
-    "description": "Label for the options page"
+    "message": "Options"
   },
   "name": {
-    "message": "名称",
-    "description": "Label for the name field"
+    "message": "Name"
   },
   "actions": {
-    "message": "操作",
-    "description": "Label for the actions section"
+    "message": "Actions"
   },
   "ossProvider": {
-    "message": "OSS 提供商",
-    "description": "Label for the OSS provider selection"
+    "message": "OSS Provider"
   },
   "save": {
-    "message": "保存",
-    "description": "Button to save changes"
+    "message": "Save"
   },
   "close": {
-    "message": "关闭",
-    "description": "Button to close the dialog or modal"
+    "message": "Close"
+  },
+  "view": {
+    "message": "View"
+  },
+  "apply": {
+    "message": "Apply"
+  },
+  "error": {
+    "message": "Error"
+  },
+  "atLeastSelectOne": {
+    "message": "Select at least one row in the table"
+  },
+  "home": {
+    "message": "Home"
+  },
+  "settings": {
+    "message": "Settings"
+  },
+  "savedSites": {
+    "message": "Saved Sites"
+  },
+  "usedBytes": {
+    "message": "Occupied Size"
+  },
+  "createOssProvider": {
+    "message": "Create OSS Provider"
+  },
+  "detail": {
+    "message": "Detail"
+  },
+  "update": {
+    "message": "Update"
+  },
+  "updateOssProvider": {
+    "message": "Update OSS Provider"
+  },
+  "selectOssProvider": {
+    "message": "Select a OSS Provider"
+  },
+  "syncToCloud": {
+    "message": "Sync data to the cloud"
+  },
+  "saveDataToYourAccount": {
+    "message": "Save data to your account"
+  },
+  "delete": {
+    "message": "Delete"
+  },
+  "localOss": {
+    "message": "Local"
+  },
+  "localOssDescription": {
+    "message": "The local OSS provider is used to store data in the local browser, and you can also choose to save the data to your account."
+  },
+  "ossAlreadyExists": {
+    "message": "This OSS does not allow the creation of multiple"
+  },
+  "createFailed": {
+    "message": "Creation failed"
+  },
+  "cancel": {
+    "message": "Cancel"
+  },
+  "confirm": {
+    "message": "Confirm"
+  },
+  "settingEmpty": {
+    "message": "There aren't any settings for this yet, but there may be in the future..."
+  },
+  "storageReady": {
+    "message": "The data is ready, refresh the page to replace localStorage"
+  },
+  "deleteTip": {
+    "message": "Are you sure you want to delete this record??"
+  },
+  "deleteOssTip": {
+    "message": "Are you sure you want to delete this OSS?"
+  },
+  "saveFailed": {
+    "message": "Save failed: $reason$",
+    "placeholders": {
+      "reason": {
+        "content": "$1"
+      }
+    }
+  },
+  "storageSaveSuccess": {
+    "message": "Successfully saved $count$ pieces of data to $ossName$",
+    "placeholders": {
+      "count": {
+        "content": "$1"
+      },
+      "ossName": {
+        "content": "$2"
+      }
+    }
+  },
+  "saveSuccess": {
+    "message": "Saved successfully"
+  },
+  "siteDetail": {
+    "message": "Site Detail"
+  },
+  "storageDetail": {
+    "message": "Storage Detail"
+  },
+  "clickToShowAll": {
+    "message": "Click to show all ($count$ characters)",
+    "placeholders": {
+      "count": {
+        "content": "$1"
+      }
+    }
+  },
+  "failedToLoad": {
+    "message": "Loading failed"
+  },
+  "unknownError": {
+    "message": "Unknown error"
+  },
+  "applyStorageMsg": {
+    "message": "Are you sure you want to apply this data? This will overwrite the current localStorage data."
+  },
+  "applyStorage": {
+    "message": "Apply data"
   }
 }
