feat: cloudflare 支持

--- a/extension/_locales/en/messages.json
+++ b/extension/_locales/en/messages.json
@@ -156,5 +156,8 @@
   },
   "applyStorage": {
     "message": "Apply data"
+  },
+  "syncAccountWarn": {
+    "message": "Chrome 账号限制每个用户的KV对最大大小为 8KB"
   }
 }
