chore: 在页面上提供 cloudflare 配置链接

--- a/extension/release/_locales/en/messages.json
+++ b/extension/release/_locales/en/messages.json
@@ -162,5 +162,11 @@
   },
   "unsupported": {
     "message": "Unsupported"
+  },
+  "documentation": {
+    "message": "Documentation"
+  },
+  "cloudflareDescription": {
+    "message": "Store your data to Cloudflare KV!"
   }
 }
